# skp2tri

./: .gitignore  CMakeLists.txt  README.md  Toolchain-windows-mingw32.cmake  skp2tri.cxx  skp_parser.h
module/: FindSlapi.cmake
module/slapi/binaries/: slapi.lib
module/slapi/headers/slapi/: slapi.h
module/slapi/headers/slapi/model/: attribute_dictionary.h  camera.h  component_definition.h  component_instance.h  defs.h  drawing_element.h  entities.h  face.h  group.h  image.h  layer.h  material.h  model.h  rendering_options.h  scene.h  texture.h  texture_writer.h  typed_value.h
